--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=restservice
 
 server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/database
-spring.datasource.username=admin
-spring.datasource.password=211105
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database=postgresql
