Initial commit: WebMagazine_lab3 project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
+# ???????? ??????????
 spring.application.name=restservice
 
+# ???? ???????
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+
+# ????????? ??????????? ? ???? ??? ???????????
+spring.datasource.url=jdbc:postgresql://localhost:5433/WebMagazine3
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA ? Hibernate
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
